fix post width size on mobile

--- a/client/src/components/posts/post/post.scss
+++ b/client/src/components/posts/post/post.scss
@@ -20,7 +20,7 @@
 
                 .user-details {
                     display: flex;
-                    gap: 20px;
+                    gap: 10px;
 
                     img {
                         width: 40px;
@@ -48,6 +48,7 @@
                     filter: themed("invertColorFilter");
                     width: 24px;
                     height: 24px;
+                    margin-left: 10px;
                 }
 
                 .post-option-menu {
@@ -98,6 +99,7 @@
                     padding-right: 15px;
                     white-space: pre-wrap;
                     font-size: 14px;
+                    overflow-x: auto;
 
                     .url-description {
                         color: #4093f8;
@@ -218,5 +220,9 @@
                 }
             }
         }
+    }
+
+    @include mobile {
+        width: 95vw;
     }
 }
